k8s/base/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-blue
  # namespace: prod-app
spec:
  replicas: 2
  # strategy: 
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxUnavailable: 1
  #     maxSurge: 1
  selector:
    matchLabels:
      app: web-app
      version: blue
  template:
    metadata:
      labels:
        app: web-app
        version: blue
    spec:      
      spec:
        terminationGracePeriodSeconds: 30

      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
      containers:
        - name: web-app
          image: 608827180555.dkr.ecr.ap-south-1.amazonaws.com/web-app
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          livenessProbe:
            httpGet: 
              path: /health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
