k8s/base/service-blue.yaml
apiVersion: v1
kind: Service
metadata: 
  name: web-svc-blue
  namespace: prod-app
  labels:
    app: web-app
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  type: ClusterIP
  selector:
    app: web-app
    version: blue
  ports:
    - name: http
      port: 80
      targetPort: 80
